# cpuminer-multi

./: .gitignore  Makefile.am  NEWS  README.md  bitops.h  configure.ac  cpu-miner.c  elist.h  helper.h  miner.h  reciprocal_div64.h  util.c  wildkeccak.c  xmalloc.c  xmalloc.h
compat/jansson/: Makefile.am  config.h
