
noinst_LIBRARIES	= libjansson.a

libjansson_a_SOURCES	= dump.c   hashtable.c  hashtable_seed.c  jansson.h          load.c     memory.c       strbuffer.c  strconv.c  \
			  utf.h error.c  hashtable.h  jansson_private.h  lookup3.h  pack_unpack.c  strbuffer.h  utf.c      value.c
libjansson_a_CFLAGS	= -fPIC

